--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-modernist
 title: AC299R Research Website
-description: Learning Closed-Form (Neural-Net) Solutions
+description: Solutions of Differential Equations with Neural Networks
 baseurl:
 markdown: kramdown
 kramdown:
